# gobu

./: .gitignore  Cargo.toml  README.md
src/: character.rs  error.rs  game.rs  images.rs  lib.rs
src/animation/: mod.rs
src/animation/premade/: mod.rs
src/animation/premade/character_transition/: fade.rs  mod.rs
src/gui/: grid.rs  mod.rs  textbox.rs
src/input/: event.rs  mod.rs
src/music/: mod.rs  player.rs
src/script/: mod.rs
src/script/parser/: dialogue.rs  end.rs  goto.rs  kill.rs  mod.rs  move_p.rs  play.rs  spawn.rs  stage.rs  values.rs  visible.rs
src/util/: character.rs  game_builder.rs  gfx_glyph.rs  load.rs  mod.rs
src/util/load/: background.rs  character.rs  gui.rs  input.rs  load.rs  mod.rs  music.rs  script.rs  transition.rs
